Colors, update, logo in navbar,

--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -44,7 +44,8 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Crafte
                     {link.name}
                   </a>
                   {section.section === "Company" && index === 2 ? (
-                    <span class="ms-1 inline rounded-lg bg-orange-500 px-2 py-1 text-xs font-bold text-neutral-50">
+                    <span class="text-neutral-700 dark:text-neutral-300">v2.0.0</span>
+                    <span class="ms-1 inline rounded-lg bg-black px-2 py-1 text-xs font-bold text-white">
                       We're hiring!
                     </span>
                   ) : null}
