--- a/src/components/ui/forms/input/EmailFooterInput.astro
+++ b/src/components/ui/forms/input/EmailFooterInput.astro
@@ -27,10 +27,10 @@ const placeholder = Astro.currentLocale === "fr" ? "Entrez votre email" : "Enter
       placeholder={placeholder}
     />
   </div>
-  <a
-    class="inline-flex w-full items-center justify-center gap-x-2 whitespace-nowrap rounded-lg border border-transparent bg-orange-400 p-3 text-sm font-bold text-neutral-50 outline-hidden ring-zinc-500 transition duration-300 hover:bg-orange-500 focus-visible:ring-3 disabled:pointer-events-none disabled:opacity-50 dark:ring-zinc-200 dark:focus:outline-hidden dark:focus:ring-1 sm:w-auto"
-    href="#"
+  <button
+    class="inline-flex w-full items-center justify-center gap-x-2 whitespace-nowrap rounded-lg border border-transparent bg-black p-3 text-sm font-bold text-neutral-50 outline-hidden ring-zinc-500 transition duration-300 hover:bg-neutral-800 focus-visible:ring-3 disabled:pointer-events-none disabled:opacity-50 dark:focus:outline-hidden sm:w-auto"
+    type="submit"
   >
     {title}
-  </a>
+  </button>
 </div>
