Change website language from French to Polish with English as secondary

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,7 +7,7 @@ import { SITE } from "@data/constants";
 import "@styles/global.css";
 
 // Setting expected props
-const { title = SITE.title, meta, structuredData, lang = "en" } = Astro.props;
+const { title = SITE.title, meta, structuredData, lang = "pl" } = Astro.props;
 
 // Interface to type-check the properties
 interface Props {
