--- a/src/components/ui/LanguagePicker.astro
+++ b/src/components/ui/LanguagePicker.astro
@@ -33,7 +33,7 @@ import Icon from "./icons/Icon.astro";
       Object.entries(languages).map(([lang, label]) => (
         <a
           class="flex items-center gap-x-3.5 rounded-lg px-3 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-hidden dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700"
-          href={`/${lang === "en" ? "" : lang}`}
+          href={`/${lang === "pl" ? "" : lang}`}
         >
           {label}
         </a>
@@ -44,9 +44,9 @@ import Icon from "./icons/Icon.astro";
 
 <script>
   // Type alias for supported languages
-  type TLanguage = "en" | "fr";
+  type TLanguage = "pl" | "en";
   // array of supported languages
-  const languages: TLanguage[] = ["en", "fr"];
+  const languages: TLanguage[] = ["pl", "en"];
 
   document.addEventListener("DOMContentLoaded", function () {
     // Only target language picker links
@@ -70,7 +70,7 @@ import Icon from "./icons/Icon.astro";
           .join("/");
 
         let newPath = "";
-        if (lang && lang !== "en") {
+        if (lang && lang !== "pl") {
           newPath = `/${lang}/${currentPath}`;
         } else {
           newPath = `/${currentPath}`;
