--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import Btn404 from "@components/ui/buttons/Btn404.astro";
 import { SITE } from "@data/constants";
 
 // Define types for translations
-type TranslationKeys = "en" | "fr";
+type TranslationKeys = "pl" | "en";
 type Translations = {
   [key in TranslationKeys]: {
     pageTitle: string;
@@ -16,8 +16,15 @@ type Translations = {
 };
 
 // Define variables for page content
-const defaultLang: TranslationKeys = "en";
+const defaultLang: TranslationKeys = "pl";
 const translations: Translations = {
+  pl: {
+    pageTitle: `Strona Nie Znaleziona | ${SITE.title}`,
+    subTitle: "Ups, to nie jest narzędzie, którego szukałeś!",
+    content:
+      "Nie pozwól, aby ta drobna przeszkoda Cię spowolniła. Wróćmy do budowania Twojego arcydzieła.",
+    btnTitle: "Wróć",
+  },
   en: {
     pageTitle: `Page Not Found | ${SITE.title}`,
     subTitle: "Oops, this isn't the tool you were looking for!",
@@ -25,18 +32,11 @@ const translations: Translations = {
       "Don't let this hiccup slow you down. Let's get you back to building your masterpiece.",
     btnTitle: "Go Back",
   },
-  fr: {
-    pageTitle: `Page Non Trouvée | ${SITE.title}`,
-    subTitle: "Oops, ce n'est pas l'outil que vous recherchiez!",
-    content:
-      "Ne laissez pas ce contretemps vous ralentir. Revenons à la construction de votre chef-d'œuvre.",
-    btnTitle: "Retournez",
-  },
 };
 
 // Determine language from the URL
 const urlPath = Astro.url.pathname;
-const langCodeMatch = urlPath.match(/^\/(en|fr)\//);
+const langCodeMatch = urlPath.match(/^\/(pl|en)\//);
 const lang: TranslationKeys = langCodeMatch
   ? (langCodeMatch[1] as TranslationKeys)
   : defaultLang;
