--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import PricingSection from "@components/sections/pricing/PricingSection.astro";
 import FAQ from "@components/sections/misc/FAQ.astro";
 import AnnouncementBanner from "@components/ui/banners/AnnouncementBanner.astro";
 import heroImage from "@images/hero-image.avif";
+import heroImage2 from "@images/maciej.jpg";
 import faqs from "@data/pl/faqs.json";
 import features from "@data/pl/features.json";
 import pricing from "@data/pl/pricing.json";
@@ -39,19 +40,19 @@ const docsUrl = getRelativeLocaleUrl("pl", "guides");
   />
 
   <HeroSection
-    title=`Wyposaż Swoje Projekty z <span
-        class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
-    subTitle="Narzędzia sprzętowe najwyższej jakości i fachowe usługi budowlane dla wszystkich potrzeb projektowych."
-    primaryBtn="Zacznij Eksplorację"
+    title=`Stwórzmy <span
+        class="text-yellow-500 dark:text-yellow-400"> design, stronę, produkt</span> który opowie Twoją historię` 
+    subTitle="Studio designu, gdzie projektuję z osobistym akcentem, który konwertuje, angażuje i zostaje w pamięci."
+    primaryBtn="Jak mogę pomóc?"
     primaryBtnURL="/products"
-    secondaryBtn="Kontakt z Zespołem Sprzedaży"
+    secondaryBtn="Poznajmy się"
     secondaryBtnURL="/contact"
-    withReview={true}
+    withReview={false}
     avatars={avatarSrcs}
     rating=`<span class="font-bold">4.8</span> / 5`
     starCount={4}
     reviews=`Z Ponad <span class="font-bold">12.8k</span> Opinii`
-    src={heroImage}
+    src={heroImage2}
     alt="Stos produktów ScrewFast zawierających różnorodne narzędzia sprzętowe"
   />
 
