--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import FeaturesNavs from "@components/sections/features/FeaturesNavs.astro";
 import TestimonialsSection from "@components/sections/testimonials/TestimonialsSection.astro";
 import PricingSection from "@components/sections/pricing/PricingSection.astro";
 import FAQ from "@components/sections/misc/FAQ.astro";
-import AnnouncementBanner from "@components/ui/banners/AnnouncementBanner.astro";
+// import AnnouncementBanner from "@components/ui/banners/AnnouncementBanner.astro";
 import heroImage from "@images/hero-image.avif";
-import heroImage2 from "@images/maciej.jpg";
+import heroImage2 from "@images/maciej.avif";
 import faqs from "@data/pl/faqs.json";
 import features from "@data/pl/features.json";
 import pricing from "@data/pl/pricing.json";
@@ -33,11 +33,11 @@ const docsUrl = getRelativeLocaleUrl("pl", "guides");
 ---
 
 <MainLayout title="ScrewFast: Narzędzia Budowlane, Sprzęt i Usługi" lang="pl">
-  <AnnouncementBanner
+  <!-- <AnnouncementBanner
     btnId="dismiss-button"
     btnTitle="Sprawdź ScrewFast na GitHub"
     url="https://github.com/mearashadowfax/ScrewFast"
-  />
+  /> -->
 
   <HeroSection
     title=`Stwórzmy <span
