--- a/src/components/sections/landing/ServicesCardSection.astro
+++ b/src/components/sections/landing/ServicesCardSection.astro
@@ -1,5 +1,6 @@
 ---
 import ServiceCard from "@components/ui/cards/ServiceCard.astro";
+import StaggeredItems from "@components/motion/StaggeredItems.astro";
 
 interface CardData {
   title: string;
@@ -21,31 +22,37 @@ const { title, subtitle, cards } = Astro.props;
 
 <section class="py-12 md:py-16 lg:py-20">
   <div class="mx-auto max-w-[85rem] px-4 sm:px-6 lg:px-8 2xl:max-w-full">
-    <!-- Section header -->
-    <div class="mx-auto mb-10 max-w-2xl text-center md:mb-16">
-      <h2 class="text-3xl font-bold tracking-tight text-neutral-800 dark:text-neutral-200 sm:text-4xl">
-        {title}
-      </h2>
-      {subtitle && (
-        <p class="mt-3 text-xl text-neutral-600 dark:text-neutral-400">
-          {subtitle}
-        </p>
-      )}
-    </div>
+    <div class="rounded-3xl bg-neutral-900 px-4 py-10 dark:bg-white sm:px-6 lg:px-8">
+      <!-- Section header -->
+      <div class="mx-auto mb-10 max-w-2xl text-center md:mb-16">
+        <h2 class="text-3xl font-bold tracking-tight text-white dark:text-neutral-800 sm:text-4xl">
+          {title}
+        </h2>
+        {subtitle && (
+          <p class="mt-3 text-xl text-neutral-200 dark:text-neutral-600">
+            {subtitle}
+          </p>
+        )}
+      </div>
 
-    <!-- Cards container -->
-    <div class="mx-auto max-w-5xl space-y-8">
-      {cards.map((card, index) => (
-        <ServiceCard
-          title={card.title}
-          description={card.description}
-          buttonText={card.button_text}
-          buttonUrl={card.button_url}
-          imagePath={card.image_path}
-          imageAlt={card.image_alt}
-          reversed={index % 2 !== 0}
-        />
-      ))}
+      <!-- Cards container -->
+      <div class="space-y-20 md:space-y-32">
+        {cards.map((card, index) => (
+          <StaggeredItems staggerDelay={0} initialDelay={0.1} duration={1} blurAmount={5}>
+            <div class="py-4">
+              <ServiceCard
+                title={card.title}
+                description={card.description}
+                buttonText={card.button_text}
+                buttonUrl={card.button_url}
+                imagePath={card.image_path}
+                imageAlt={card.image_alt}
+                reversed={index % 2 !== 0}
+              />
+            </div>
+          </StaggeredItems>
+        ))}
+      </div>
     </div>
   </div>
 </section> 
