--- a/src/components/sections/features/FeaturesGeneral.astro
+++ b/src/components/sections/features/FeaturesGeneral.astro
@@ -24,7 +24,7 @@ const { title, subTitle, src, alt, features } = Astro.props;
 <section
   class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full"
 >
-  <!-- Block to display the feature image -->
+  <!-- Block to display the feature image 
   <div class="relative mb-6 overflow-hidden md:mb-8">
     {
       src && alt && (
@@ -39,7 +39,7 @@ const { title, subTitle, src, alt, features } = Astro.props;
       )
     }
   </div>
-
+-->
   <!-- Displaying the main content consisting of title, subtitle, and several `IconBlock` components -->
   <div class="mt-5 grid gap-8 lg:mt-16 lg:grid-cols-3 lg:gap-12">
     <!-- Block for title and subtitle -->
